fixed name position and spacing in sections up to projects. completed Skills and Coursework components.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: left;
   margin: 0 auto;
-  max-width: 50em;
+  max-width: 60em;
   margin-top: 10rem;
   color: #333;
 }
@@ -17,7 +17,6 @@
   height: 100%;
   width: 65%;
   float: right;
-  padding-left: 0.5rem;
 }
 
 .right-body.fade {
@@ -26,27 +25,25 @@
 }
 
 .left-col {
-  width: 35%;
+  width: 20%;
   height: 100%;
   float: left;
   position: fixed;
-  padding-right: 0.5rem;
-}
-
-.left-col h1 {
-  width: 35%;
-  text-align: right;
-  justify-content: right;
 }
 
 .name {
+  width: 100%;
+  text-align: right;
+  justify-content: right;
   font-family: 'Roboto Mono', monospace;
   font-size: x-large;
   font-weight: 500;
+  line-height: 1.4em;
 }
 
 .nav .nav-content {
   max-width: 900px;
+  float: right;
   padding: 0rem;
   margin: 0;
   display: flex;
@@ -61,6 +58,7 @@
 .nav {
   opacity: 1;
   transition: 2s opacity;
+  /* background-color: yellow; */
 }
 
 .nav-item {
@@ -73,7 +71,7 @@
   font-size: small;
 }
 
-.nav-item p {
+.nav-item .dot {
   visibility: hidden;
   display: inline;
   padding-left: 5px;
@@ -85,9 +83,10 @@
 .nav-item > .active {
   /* border-bottom: 1px solid #333; */
   font-weight: 800;
+  color: black;
 }
 
-.nav-item > .active p {
+.nav-item > .active .dot {
   visibility: visible;
 }
 
@@ -100,21 +99,23 @@
   color: #E4AC00;
   font-size: small;
   margin-top: 40px;
+  margin-bottom: 0;
 }
 
 .about-sub {
   font-family: 'Roboto Mono', monospace;
   font-weight: 700;
   display: inline-block;
-  color: black;
+  color: #000000;
   margin: 0;
+  margin-top: -2px;
 }
 
 .about-content {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   color: black;
-  margin-top: 12px;
+  margin-top: 9px;
 }
 
 .ed-sub {
@@ -122,13 +123,14 @@
   font-weight: 700;
   color: black;
   margin: 0;
+  margin-top: -4px;
 }
 
 .ed-content {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   color: black;
-  margin-top: 12px;
+  margin-top: 0px;
   margin-bottom: 0px;
 }
 
@@ -137,18 +139,109 @@
   font-weight: 700;
   display: inline-block;
   margin-top: 4px;
+  margin-bottom: 0;
 }
 
 .ed-span {
   display: inline-block;
   margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.job-sub {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 700;
+  color: black;
+  margin: 0;
+  display: inline-block;
+}
+
+.job-pos {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  color: black;
+  margin-bottom: 0px;
+}
+
+.job-date {
+  display: block;
+  font-size: small;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+
+.job-content {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  margin-top: 2px;
+}
+
+#job {
+  margin-top: 25px;
+}
+
+#jobs {
+  margin-top: -13px;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+.column p{
+  margin-bottom: 5px;
+  margin-top: 0px;
+}
+
+.skills{
+  margin-top: 12px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.course-column {
+  float: left;
+  width: 50%;
+}
+
+.course-column p{
+  margin-bottom: 5px;
+  margin-top: 0px;
+}
+
+.course-col-sect {
+  margin-bottom: 15px;
+}
+
+.course-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.course-school-sub {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 700;
+  color: black;
+}
+
+/* @media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 
 
